--- a/src/flavors/defaultflavor/config.yml
+++ b/src/flavors/defaultflavor/config.yml
@@ -60,10 +60,6 @@ map:
       type: place
       slug: report
 
-    # For our Shareabouts reports
-    - id: reports
-      type: shareabouts
-
 # The values map the place type to map icons (defined below).
 place_types:
   observation:
@@ -247,7 +243,7 @@ sidebar:
           title: _(Community Data)
           visibleDefault: true
           layers:
-            - id: reports
+            - id: duwamish
               title: _(Community Reports)
               visibleDefault: true
 
