--- a/src/flavors/duwamish-watershed/config.yml
+++ b/src/flavors/duwamish-watershed/config.yml
@@ -46,19 +46,12 @@ map:
   layers:
     # SmarterCleanup Mapbox base layer:
     - id: osm
-      type: basemap
-      defaultBase: true
       url: //api.tiles.mapbox.com/v4/smartercleanup.k9dcl2i9/{z}/{x}/{y}.png?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
       attribution: '&copy; OpenStreetMap contributors, CC-BY-SA. <a href="//mapbox.com/about/maps" target="_blank">Terms &amp; Feedback</a>. Geocoding Courtesy of <a href="//www.mapquest.com/" target="_blank">MapQuest</a> <img src="//developer.mapquest.com/content/osm/mq_logo.png">.'
 
     - id: satellite
-      type: basemap
       url: //api.tiles.mapbox.com/v4/smartercleanup.pe3o4gdn/{z}/{x}/{y}.png?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
       attribution: '&copy; OpenStreetMap contributors, CC-BY-SA. <a href="//mapbox.com/about/maps" target="_blank">Terms &amp; Feedback</a>. Geocoding Courtesy of <a href="//www.mapquest.com/" target="_blank">MapQuest</a> <img src="//developer.mapquest.com/content/osm/mq_logo.png">.'
-
-    # For our Shareabouts reports
-    - id: reports
-      type: shareabouts
 
     # Carto basemap additions layer
     - id: additions
@@ -394,6 +387,13 @@ sidebar:
       icon: list
       view: GISLegendView
       title: _(Map Layers:)
+      basemaps:
+        - id: osm
+          title: _(OpenStreetMap)
+          visibleDefault: true
+        - id: satellite
+          title: _(Satellite View)
+          visibleDefault: false
       groupings:
         - id: grp-land
           title: _(Land Data)
@@ -409,12 +409,6 @@ sidebar:
             - id: noxious-weeds
               title: _(Noxious Weeds)
               description: _(Invasive species of weeds)
-              visibleDefault: false
-
-              # Toggle our basemaps
-            - id: toggle-satellite
-              title: _(Satellite View)
-              description: _(Toggle the satellite map view)
               visibleDefault: false
 
               # Land Use
@@ -447,8 +441,18 @@ sidebar:
           title: _(Community Data)
           visibleDefault: false
           layers:
-            - id: reports
+            - id: duwamish
               title: _(Community Reports)
+              description: _(Reports added to the map by citizens)
+              visibleDefault: false
+
+            - id: trees
+              title: _(Trees)
+              description: _(Reports added to the map by citizens)
+              visibleDefault: false
+
+            - id: air
+              title: _(Air Reports)
               description: _(Reports added to the map by citizens)
               visibleDefault: false
 
