--- a/src/flavors/gtopenspace/config.yml
+++ b/src/flavors/gtopenspace/config.yml
@@ -45,10 +45,6 @@ map:
       url: //api.tiles.mapbox.com/v4/smartercleanup.pe3o4gdn/{z}/{x}/{y}.png?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
       attribution: '&copy; OpenStreetMap contributors, CC-BY-SA. <a href="//mapbox.com/about/maps" target="_blank">Terms &amp; Feedback</a>. Geocoding Courtesy of <a href="//www.mapquest.com/" target="_blank">MapQuest</a> <img src="//developer.mapquest.com/content/osm/mq_logo.png">.'
 
-    # For our Shareabouts reports
-    - id: reports
-      type: shareabouts
-
     # Carto basemap additions layer
     - id: additions
       url: https://smartercleanup.cartodb.com/api/v2/viz/3c0197f8-c7d8-11e5-8232-0ecfd53eb7d3/viz.json
@@ -449,12 +445,19 @@ sidebar:
       icon: list
       view: GISLegendView
       title: _(Map Layers:)
+      basemaps:
+        - id: osm
+          title: _(OpenStreetMap)
+          visibleDefault: true
+        - id: satellite
+          title: _(Satellite View)
+          visibleDefault: false
       groupings:
         - id: grp-community
           title: _(Community Data)
           visibleDefault: true
           layers:
-            - id: reports
+            - id: gtopenspace
               title: _(Community Reports)
               visibleDefault: true
 
@@ -474,11 +477,6 @@ sidebar:
           title: _(Land Data)
           visibleDefault: false
           layers:
-              # Toggle our basemaps
-            - id: toggle-satellite
-              title: _(Satellite View)
-              visibleDefault: false
-
               # Land Use
             - id: landuse
               title: _(Land use)
