set duwamish dataset to be visible by default

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -605,7 +605,7 @@ sidebar:
           layers:
             - id: duwamish
               title: _(Duwamish Cleanup Reports)
-              visibleDefault: false
+              visibleDefault: true
 
             - id: trees
               title: _(Trees!)
