--- a/src/flavors/gtopenspace/config.yml
+++ b/src/flavors/gtopenspace/config.yml
@@ -1,9 +1,9 @@
 # Settings for the app
 app:
   # HTML Title
-  title: Georgetown Open Space Vision Framework
+  title: Georgetown Open Space
   # Header name
-  name: "Georgetown Open Space Vision Framework"
+  name: "Georgetown Open Space"
   # Meta description that will show up in Google search results
   meta_description: "_(Welcome! We are a community of residents and stakeholders who are monitoring the cleanup of toxic waste in Seattle's Duwamish River.)"
   # Meta author that will show up in Google search results
@@ -51,14 +51,49 @@ map:
       type: cartodb
 
   # Legend Layers
+    - id: gtopenspace
+      url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
+      type: landmark
+      slug: idea
+      sources: 
+        - "http://a.tiles.mapbox.com/v4/smartercleanup.0f2jhd96/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
 
-    - id: gtlayers
-      type: cartodb
-      url: "https://smartercleanup.carto.com/api/v2/viz/66a32abe-567e-11e6-9878-0e3ebc282e83/viz.json"
+    - id: restoration
+      url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
+      type: landmark
+      sources:
+        - "http://a.tiles.mapbox.com/v4/smartercleanup.k9dcl2i9/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
+        - "http://a.tiles.mapbox.com/v4/smartercleanup.0f2jhd96/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
 
     - id: gtopenspace
       type: place
       slug: idea
+
+    - id: vision
+      url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
+      sources:
+        - "http://a.tiles.mapbox.com/v4/smartercleanup.mfigd1mf/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
+      type: landmark
+
+       # WRIA9 watershed
+    - id: watershed
+      type: cartodb
+      url: "https://heyduwamishcore.cartodb.com/api/v2/viz/61226fec-0399-11e6-8de1-0e31c9be1b51/viz.json"
+
+    - id: cleanup
+      type: cartodb
+      url: "https://smartercleanup.cartodb.com/api/v2/viz/b369d508-c02b-11e5-9a08-0ecfd53eb7d3/viz.json"
+
+      # Land Use
+    - id: landuse
+      type: cartodb
+      url: "https://hdbig.cartodb.com/api/v2/viz/76d1e054-d5ed-11e5-bf91-0e5db1731f59/viz.json"
+      opacity: 0.5
+
+      # Green Seattle Partnership restoration phases
+    - id: phases
+      type: cartodb
+      url: "https://gis206.cartodb.com/api/v2/viz/217a2e02-e729-11e5-9bd4-0e5db1731f59/viz.json"
 
       # WMS Original Flow
     - id: duwamish-original
@@ -66,10 +101,34 @@ map:
       type: cartodb
       opacity: 0.4
 
+      # Noxious Weeds
+    - id: noxious-weeds
+      type: cartodb
+      url: "https://hdbig.cartodb.com/api/v2/viz/f9350ac8-d677-11e5-980b-0e5db1731f59/viz.json"
+      opacity: 0.5
+
 # The keys show up in the dropdown list when you are adding a new place
 
 # The values map the place type to map icons (defined below).
 place_types:
+
+  georgetownZoomStyle:
+    - condition: '{{layer.focused}} === true'
+      icon:
+        iconSize: [60, 60]
+        iconAnchor: [30, 30]
+    - condition: '{{map.zoom}} < 15'
+      icon:
+        iconSize: [7.5, 7.5]
+        iconAnchor: [4, 4]
+    - condition: '{{map.zoom}} < 17'
+      icon:
+        iconSize: [25, 25]
+        iconAnchor: [12.5, 12.5]
+    - condition: '{{map.zoom}} >= 17'
+      icon:
+        iconSize: [40, 40]
+        iconAnchor: [20, 20]
 
   mapboxZoomStyle:
     - condition: '{{layer.focused}} === true'
@@ -85,7 +144,94 @@ place_types:
         iconSize: [30, 30]
         iconAnchor: [15, 15]
 
+  wetland:
+    zoomType: georgetownZoomStyle
+    rules:
+      - condition: '"{{properties.marker-color}}" == "a3e46b"'
+        icon:
+          iconUrl: /static/css/images/markers/marker-land_comp.png
 
+      - condition: '"{{properties.marker-color}}" == "f1f075"'
+        icon:
+          iconUrl: /static/css/images/markers/marker-land_prog.png
+
+      - condition: '"{{properties.marker-color}}" == "f86767"'
+        icon:
+          iconUrl: /static/css/images/markers/marker-land_no-prog-or-dead.png
+  park:
+    zoomType: georgetownZoomStyle
+    rules:
+      - condition: '"{{properties.marker-color}}" == "a3e46b"'
+        icon:
+          iconUrl: /static/css/images/markers/marker-parks_comp.png
+
+      - condition: '"{{properties.marker-color}}" == "f1f075"'
+        icon:
+          iconUrl: /static/css/images/markers/marker-parks_prog.png
+
+      - condition: '"{{properties.marker-color}}" == "f86767"'
+        icon:
+          iconUrl: /static/css/images/markers/marker-parks_no-prog-or-dead.png
+
+  school:
+    zoomType: georgetownZoomStyle
+    rules:
+      - condition: '"{{properties.marker-color}}" == "a3e46b"'
+        icon:
+          iconUrl: /static/css/images/markers/marker-qual_comp.png
+
+      - condition: '"{{properties.marker-color}}" == "f1f075"'
+        icon:
+          iconUrl: /static/css/images/markers/marker-qual_prog.png
+
+      - condition: '"{{properties.marker-color}}" == "f86767"'
+        icon:
+          iconUrl: /static/css/images/markers/marker-qual_no-prog-or-dead.png
+
+  police:
+    zoomType: georgetownZoomStyle
+    rules:
+      - condition: '"{{properties.marker-color}}" == "a3e46b"'
+        icon:
+          iconUrl: /static/css/images/markers/marker-safe_comp.png
+
+      - condition: '"{{properties.marker-color}}" == "f1f075"'
+        icon:
+          iconUrl: /static/css/images/markers/marker-safe_prog.png
+
+      - condition: '"{{properties.marker-color}}" == "f86767"'
+        icon:
+          iconUrl: /static/css/images/markers/marker-safe_no-prog-or-dead.png
+
+  rail:
+    zoomType: georgetownZoomStyle
+    rules:
+      - condition: '"{{properties.marker-color}}" == "a3e46b"'
+        icon:
+          iconUrl: /static/css/images/markers/marker-transp_comp.png
+
+      - condition: '"{{properties.marker-color}}" == "f1f075"'
+        icon:
+          iconUrl: /static/css/images/markers/marker-transp_prog.png
+
+      - condition: '"{{properties.marker-color}}" == "f86767"'
+        icon:
+          iconUrl: /static/css/images/markers/marker-transp_no-prog-or-dead.png
+
+  town-hall:
+    zoomType: georgetownZoomStyle
+    rules:
+      - condition: '"{{properties.marker-color}}" == "a3e46b"'
+        icon:
+          iconUrl: /static/css/images/markers/marker-hist_comp.png
+
+      - condition: '"{{properties.marker-color}}" == "f1f075"'
+        icon:
+          iconUrl: /static/css/images/markers/marker-hist_prog.png
+
+      - condition: '"{{properties.marker-color}}" == "f86767"'
+        icon:
+          iconUrl: /static/css/images/markers/marker-hist_no-prog-or-dead.png
 
   mapbox:
     # Mapbox Points
@@ -107,7 +253,62 @@ place_types:
           fillOpacity: '{{properties.fill-opacity}}'
           weight: "{{properties.stroke-width}}"
 
+  danger:
+    zoomType: mapboxZoomStyle
+    rules:
+      - condition: 'true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-construction.png
 
+  park2:
+    zoomType: mapboxZoomStyle
+    rules:
+      - condition: 'true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-heart.png
+
+  industrial:
+    zoomType: mapboxZoomStyle
+    rules:
+      - condition: 'true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-industrial.png
+
+  bicycle:
+    zoomType: mapboxZoomStyle
+    rules:
+      - condition: 'true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-bike.png
+
+  swimming:
+    zoomType: mapboxZoomStyle
+    rules:
+      - condition: 'true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-swimming.png
+
+  theatre:
+    zoomType: mapboxZoomStyle
+    rules:
+      - condition: 'true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-art.png
+
+  zoo:
+    zoomType: mapboxZoomStyle
+    rules:
+      - condition: 'true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-whale.png
+
+  # # needs a marker
+  # farm:
+  #   zoomType: mapboxZoomStyle
+  #   rules:
+  #     - condition: 'true'
+  #       icon:
+  #         iconUrl: /static/css/images/markers/dot-0d85e9.png
 
 
   low:
@@ -169,7 +370,7 @@ place_types:
           iconSize: [38, 46]
           iconAnchor: [19, 46]
   high:
-    label: _(High)
+    label: _(Featured site)
     rules:
       - condition: '{{layer.focused}} === true'
         icon:
@@ -197,8 +398,9 @@ place_types:
           iconUrl: /static/css/images/markers/marker-e1264d.png
           iconSize: [38, 46]
           iconAnchor: [19, 46]
-  streetscape:
-    label: _(Streetscape)
+
+  feature:
+    label: _(Featured site)
     rules:
       - condition: '{{layer.focused}} === true'
         icon:
@@ -227,35 +429,6 @@ place_types:
           iconSize: [30, 30]
           iconAnchor: [15, 15]
 
-  park-improvement:
-    label: _(Park Improvement)
-    rules:
-      - condition: '{{layer.focused}} === true'
-        icon:
-          iconUrl: /static/css/images/markers/marker-star-green.png
-          shadowUrl: /static/css/images/marker-shadow.png
-          iconSize: [60, 60]
-          iconAnchor: [30, 30]
-          shadowSize: [60, 60]
-          shadowAnchor: [30, 30]
-
-      - condition: '{{map.zoom}} < 11'
-        icon:
-          iconUrl: /static/css/images/markers/marker-star-green.png
-          iconSize: [12, 12]
-          iconAnchor: [6, 6]
-
-      - condition: '{{map.zoom}} < 15'
-        icon:
-          iconUrl: /static/css/images/markers/marker-star-green.png
-          iconSize: [18, 18]
-          iconAnchor: [9, 9]
-
-      - condition: '{{map.zoom}} >= 15'
-        icon:
-          iconUrl: /static/css/images/markers/marker-star-green.png
-          iconSize: [30, 30]
-          iconAnchor: [15, 15]
 
 # Sidebar and activity stream should be enabled and disabled together!
 # note: sidebar is aka 'MasterLegend'
@@ -281,24 +454,27 @@ sidebar:
           visibleDefault: false
       groupings:
         - id: grp-community
-          title: _(Primary Layers)
+          title: _(Community Data)
           visibleDefault: true
           layers:
             - id: gtopenspace
-              title: _(Community Reports)
+              title: _(Priority Sites)
               visibleDefault: true
 
-              # Toggle our basemaps
-            - id: toggle-satellite
-              title: _(Satellite View)
+            - id: cleanup
+              title: _(River Cleanup Plan)
               visibleDefault: false
 
-            - id: gtlayers
-              title: _(Map enhancement)
-              visibleDefault: true
+            - id: vision
+              title: _(Community Vision)
+              visibleDefault: false
+
+            - id: restoration
+              title: _(Restoration Sites)
+              visibleDefault: false
 
         - id: grp-land
-          title: _(Additional Layers)
+          title: _(Land Data)
           visibleDefault: false
           layers:
               # Land Use
@@ -306,10 +482,25 @@ sidebar:
               title: _(Land use)
               visibleDefault: false
 
+              # Green Seattle Partnership restoration phases
+            - id: phases
+              title: _(Green Seattle partnership)
+              visibleDefault: false
+
               # Noxious Weeds
             - id: noxious-weeds
               title: _(Noxious Weeds)
               visibleDefault: false
+
+              # WRIA9 watershed
+            - id: watershed
+              title: _(Watershed)
+              visibleDefault: false
+
+        - id: grp-history
+          title: _(Historical Data)
+          visibleDefault: false
+          layers:
 
               # WMS Original Flow
             - id: duwamish-original
@@ -323,16 +514,22 @@ sidebar:
       title: _(Activity Stream:)
 
     - id: reports_legend
-      title: _(Legend:)
+      title: _(Citizen Reports:)
       view: LegendView
       icon: info-circle
       items:
-        - title: _(Streetscape improvement sites)
-          image: /static/css/images/markers/marker-star.png
+        - title: _(Observations)
+          image: /static/css/images/markers/marker-observation.png
           url: /filter/observation
-        - title: _(Park-like improvement sites)
-          image: /static/css/images/markers/marker-star-green.png
+        - title: _(Ideas)
+          image: /static/css/images/markers/marker-idea.png
           url: /filter/idea
+        - title: _(Questions)
+          image: /static/css/images/markers/marker-question.png
+          url: /filter/question
+        - title: _(Complaints)
+          image: /static/css/images/markers/marker-complaint.png
+          url: /filter/complaint
 
 activity:
   # Optional. Activity is supported by default. Set to false to disable.
@@ -344,7 +541,7 @@ activity:
 
 place:
   dataset_slug: report # default is 'place'
-  adding_supported: false
+  adding_supported: true
   add_button_label: _(Share an idea on the map!)
   # Labels for the buttons that toggle the map and list views
   show_list_button_label: _(Show list of ideas)
@@ -352,7 +549,7 @@ place:
   action_text: _(added)
   title: _(Tell us more...)
   action_text: _(created)
-  anonymous_name: _(Georgetown Community)
+  anonymous_name: _(Someone)
   submit_button_label: _(Put it on the map!)
 
   location_item_name: location
@@ -421,33 +618,14 @@ place:
           display_prompt:
           placeholder: _(Enter comment...)
           optional: true
-    streetscape:
+
+    feature:
       includeOnForm: false     
       name: location_type
       dataset: gtopenspace
       icon_url: /static/css/images/markers/marker-star.png
-      value: streetscape
-      label: _(Streetscape)
-      fields:
-        - name: title
-          type: text
-          prompt: _(Title:)
-          display_prompt: _(Title:)
-          placeholder: _(Enter title...)
-          optional: true
-        - name: comment
-          type: textarea
-          prompt: _(Comment:)
-          display_prompt:
-          placeholder: _(Enter comment...)
-          optional: true
-    park-improvement:
-      includeOnForm: false     
-      name: location_type
-      dataset: gtopenspace
-      icon_url: /static/css/images/markers/marker-star.png
-      value: park-improvement
-      label: _(Park improvement)
+      value: feature
+      label: _(Featured site)
       fields:
         - name: title
           type: text
@@ -479,20 +657,20 @@ place:
     #       value: _(Receive email updates on your report)
     #     - key: size
     #       value: 30
-    - prompt: _(Image)
-      inputfile_label: _(Add an Image)
-      type: file
-      name: my_image
-      optional: true
-      attrs:
-        - key: accept
-          value: image/*
+    # - name: my_image
+    #   type: file
+    #   prompt: _(Image)Georgetown Mini Mart City Park
+    #   inputfile_label: _(Add an Image)
+    #   optional: true
+    #   attrs:
+    #     - key: accept
+    #       value: image/*
     - type: submit
       label: _(Put it on the map!)
 
   #### end dynamic form config ####
 
-## Can we delete this?
+
 
   items:
     - prompt: _(Type of report)
@@ -582,14 +760,6 @@ survey:
       type: text
       name: submitter_name
       sticky: true
-    - prompt: _(Image)
-      inputfile_label: _(Add an Image)
-      type: file
-      name: my_image
-      optional: true
-      attrs:
-        - key: accept
-          value: image/*
 
 support:
   submission_type: support
@@ -604,40 +774,35 @@ pages:
     slug: about
     name: overview
     hide_from_top_bar: true
-    start_page: true
 
 story:
-  streetscapes:
-      tagline: _(Go to the next site)
-      default_visible_layers:
-        - reports
-        - gtlayers
-      order: 
-        - url: idea/628
-        - url: idea/629
-        - url: idea/634
-        - url: idea/631
-        - url: idea/635
-        - url: idea/633
-        - url: idea/636
-        - url: idea/637
-        - url: idea/552
-        - url: idea/638
-        - url: idea/639
-        - url: idea/643
-        - url: idea/641
-        - url: idea/642
-        - url: idea/644
-        - url: idea/645
-        - url: idea/646
-        - url: idea/647
-        - url: idea/648
-        - url: idea/649
-        - url: idea/650
-        - url: idea/651
-        - url: idea/558
-        - url: idea/653
-        - url: idea/654
-        - url: idea/655
-        - url: idea/656
-        - url: idea/676
+  test_story1:
+    default_visible_layers:
+      - gtopenspace
+    tagline: _(Explore other priority sites)
+    order: 
+      - url: idea/552
+      - url: idea/554
+      - url: idea/555
+      - url: idea/556
+      - url: idea/558
+      - url: idea/559
+      - url: idea/560
+      - url: idea/564
+      - url: idea/572
+      - url: idea/573
+      - url: idea/594
+      - url: idea/595
+      - url: idea/574
+      - url: idea/575
+      - url: idea/576
+      - url: idea/580
+      - url: idea/585
+      - url: idea/586
+
+  test_story2:
+    tagline: _(This is a priority site. Use arrows to explore others)
+    order: 
+      - url: friends-of-georgetown-history-museum
+      - url: ruby-chow-park
+      - url: georgetown-steam-plant
